--- a/package.json
+++ b/package.json
@@ -52,14 +52,14 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bmahajanZ/zsdk.git.git"
+    "url": "git+https://github.com/bmahajanZ/zsdk.git"
   },
   "author": "anonymous <email@email.email> (https://example.com)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/bmahajanZ/zsdk.git/issues"
+    "url": "https://github.com/bmahajanZ/zsdk/issues"
   },
-  "homepage": "https://github.com/bmahajanZ/zsdk.git#readme",
+  "homepage": "https://github.com/bmahajanZ/zsdk#readme",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
