feat(prelogin): android fetch data

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -115,6 +115,9 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+  implementation("androidx.security:security-crypto:1.1.0-alpha06")
+  implementation(files("${System.getProperty("user.home")}/Desktop/React-libs/zscalersdk-android-debug.aar"))
 }
 
 if (isNewArchitectureEnabled()) {
