--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "type": "git",
     "url": "git+https://github.com/bmahajanZ/zsdk.git"
   },
-  "author": "anonymous <email@email.email> (https://example.com)",
+  "author": "anonymous <bmahajan@zscaler.com> (https://example.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bmahajanZ/zsdk/issues"
@@ -78,7 +78,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
-    "react-native": "0.76.0",
+    "react-native": "^0.75.0",
     "react-native-builder-bob": "^0.30.2",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
