--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "typecheck": "tsc",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "clean": "del-cli android/build example/android/build example/android/app/build example/ios/build lib",
-    "prepare": "bob build",
+    "prepare": "bob build && npx rimraf ios/generated/build/generated/ios/FBReactNativeSpec* ios/generated/build/generated/ios/RCTModulesConformingToProtocolsProvider*",
     "release": "release-it"
   },
   "keywords": [
@@ -78,8 +78,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
-    "react-native": "^0.75.0",
-    "react-native-builder-bob": "^0.30.2",
+    "react-native": "^0.75.4",
+    "react-native-builder-bob": "^0.30.3",
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.2.2"
@@ -183,7 +183,7 @@
   },
   "codegenConfig": {
     "name": "RNZsdkSpec",
-    "type": "all",
+    "type": "modules",
     "jsSrcsDir": "src",
     "outputDir": {
       "ios": "ios/generated",
